add new features

--- a/my site/style.css
+++ b/my site/style.css
@@ -2,7 +2,7 @@ body {
     background-color: lightcoral;
 }
 h1 {
-    color: brown;
+    color: rgb(219, 48, 48);
 }
 h2 {
     color: lightsalmon;
