--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: lightcoral;
+    background-color: rgb(231, 166, 166);
 }
 h1 {
     color: rgb(219, 48, 48);
 }
 h2 {
-    color: lightsalmon;
+    color: rgb(78, 45, 31);
 }
